update code 11h